# OneAPI

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
assets/: badges.md
docs/: promote_article.md
oneapi/: __init__.py  app.py  cli.py  config.py  dashboard.py  rate_limiter.py  request_logger.py  router.py
oneapi/providers/: __init__.py  anthropic.py  base.py  moonshot.py  openai_compat.py  zhipu.py
static/: app.js  index.html  style.css
tests/: test_core.py
